@@ -1,5 +1,10 @@
 2013-02-01  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
+	* build-all.sh: Correct error in merging option to control
+	building of unified source tree.
+
+2013-02-01  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
 	* dejagnu/baseboards/arc-linux-aa4.exp: Correct commenting.
 
 2013-02-01  Jeremy Bennett <jeremy.bennett@embecosm.com>
